vlib/v/checker/tests/assert_extra_message.vv
fn abc(i int) {
}

fn multy(i int) (int, string) {
	return i, 'aa'
}

fn main() {
	i := 123
	assert 2 == 6 / 3, 'math works'
	assert 10 == i - 120, 'i: $i'
	assert 10 == i - 120, abc(i)
	assert 10 == i - 120, multy(i)
	assert 10 == i - 120, 456
}
